# P.R.I.S.M-Physics-Ray-tracing-Interactive-Softbody-simulation-Module-

./: .gitignore
.claude/: settings.local.json
Project/: PRISM ENGINE Build를 위한.txt
Project/1_JGN/: 2.19.md  HLMS_Deep_Dive.md  Hybrid_Porting_Architecture.md  Hybrid_Rendering_Architecture.md  Ogre_Core_Concepts.md  PRISM_Architecture_Master.md  PRISM_Project_Overview.md  README.md  Vulkan_Architecture_Guide.md
Project/1_JGN/ogre-next/RenderSystems/Vulkan/include/: OgreVulkanDevice.h
Project/1_JGN/ogre-next/RenderSystems/Vulkan/src/: OgreVulkanDevice.cpp  OgreVulkanDevice_temp.cpp  OgreVulkanRenderSystem.cpp  OgreVulkanWindow.cpp
Project/1_JGN/ogre-next/RenderSystems/Vulkan/src/Vao/: OgreVulkanVaoManager.cpp
Project/2_LSM/: README.md
Project/2_LSM/Shader_Study/RayTracing_basic/: CMakeLists.txt  Vulkan_ex01.cpp
Project/2_LSM/Shader_Study/RayTracing_basic/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen
Project/2_LSM/Vulkan_Basic/: CMakeLists.txt
Project/2_LSM/Vulkan_HybridPipeLine/: .gitignore  CMakeLists.txt  Vulkan_ex01.cpp
Project/2_LSM/Vulkan_HybridPipeLine/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  shadow.rmiss
Project/2_LSM/Vulkan_HybridPipeLine_Sample/: Vulkan_ex01.cpp
Project/2_LSM/Vulkan_HybridPipeLine_Sample/shaders/: closesthitbrdf.rchit  closesthitbsdf.rchit  closesthitbssrdf.rchit  miss.rmiss  raygenbrdf.rgen  raygenbrdf_re.rgen  raygenbsdf.rgen  raygenbssrdf.rgen  raygenbssrdf_cloud.rgen  raygenbssrdf_re.rgen
Project/3_HSH/: README.md
Project/3_HSH/Vulkan_Particle/: Vulkan_Particle.slnx
Project/3_HSH/Vulkan_Particle/Vulkan_Particle/: Vulkan_Particle.vcxproj  Vulkan_Particle.vcxproj.filters
Project/3_HSH/Vulkan_Particle/Vulkan_Particle/shaders/: comp.spv  vert.spv
Project/3_HSH/Vulkan_XPBD/: CMakeLists.txt
Project/3_HSH/Vulkan_XPBD/src/: Vulkan_XPBD.cpp
Project/3_HSH/Vulkan_XPBD_Interaction/: CMakeLists.txt
Project/3_HSH/Vulkan_XPBD_Interaction/shaders/: ComputeShader.comp
Project/3_HSH/Vulkan_XPBD_Interaction/src/: Vulkan_XPBD_Interaction.cpp
Project/3_HSH/Vulkan_XPBD_SphereCollision/: CMakeLists.txt
Project/3_HSH/Vulkan_XPBD_SphereCollision/src/: Vulkan_XPBD_SphereCollision.cpp
Project/3_HSH/Vulkan_XPBD_TetraSim/: CMakeLists.txt
Project/3_HSH/Vulkan_XPBD_TetraSim/shaders/: Predict.comp  SolveDist.comp  SolveVol.comp  Update.comp
Project/3_HSH/Vulkan_XPBD_TetraSim/src/: Vulkan_XPBD_TetraSim.cpp
Project/PRISM_Engine/: .gitignore  0308.md  03_05.md  CMakeLists.txt  PRISM_Engine_Architecture.md  PRISM_Engine_Modifications.md  PRISM_Engine_Redesign.md  PRISM_Pipeline_Design.md  vcpkg.json  코넬박스 구성.txt
Project/PRISM_Engine/media/Hlms/Pbs/GLSL/: GBufferPrism_piece_ps.glsl
Project/PRISM_Engine/shaders/: closesthit.rchit  closesthitbrdf.rchit  closesthitbsdf.rchit  closesthitbsdf.rchit.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen_full.rgen  raygenbrdf.rgen  raygenbsdf.rgen  raygenbsdf.rgen.spv  shadow.rmiss  shadow.rmiss.spv
Project/PRISM_Engine/src/: PrismCompositorPass.cpp  PrismCompositorPass.h  PrismRTPipeline.cpp  PrismRTPipeline.h  main.cpp
Project/PRISM_Engine/vcpkg-overlays/ogre-next/: portfile.cmake  prism_rt.patch  surgery.ps1  vcpkg.json
